[package]
name = "batis4sqlx"
version = "0.1.5"
edition = "2024"

authors = ["W <w793981522@qq.com>"]
description = "A personal Rust ORM project built on SQLx, inspired by MyBatis-Plus."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wintheres/batis4sqlx"

[dependencies]
sqlx = { version = "0.8.6", features = ["mysql", "chrono", "runtime-tokio", "tls-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
batis4sqlx-macros = {path = "../batis4sqlx-macros"}